# jumper-py

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  Pipfile  README.md  mypy.ini  pyproject.toml  tasks.py
.github/workflows/: python-publish.yml
profiling/: decorators.py
profiling/results/: results.dot  results.html  results.prof
src/: __version__.py  grid.py  heuristics.py  interfaces.py  node.py  path.py  pathfinder.py  properties.py  utils.py
src/search/: astar.py  jps.py  thetastar.py
tests/: script.py  test_integration.py  test_utils.py
tests/search/: astar.py
