[tool.poetry]
name = "jumper-py"
version = "0.1.0"
description = ""
authors = ["David <davigetto@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pyprof2calltree = "^1.4.5"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pyinstrument = "^3.4.2"
pytest-mock = "^3.6.1"
invoke = "^1.6.0"
yappi = "^1.3.2"


[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "$version"
version_files = [
    "src/__version__.py",
    "pyproject.toml:version"
]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
